offline maps firts concepts

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "SuriMovilNG",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "request": "^2.71.0",
+    "request-promise": "^2.0.1"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "glob": "~4.3.5",
@@ -37,6 +40,7 @@
     "cordova": "~4.2.0",
     "lodash": "~3.1.0",
     "mkdirp": "~0.5.0",
+    "mkdirp-then": "1.2.0",
     "ncp": "~1.0.1",
     "orchestrator": "~0.3.7",
     "ripple-emulator": "~0.9.24",
